--- a/src/features/CareViewPatientsSummary/styles/CareViewPatientsSummary.scss
+++ b/src/features/CareViewPatientsSummary/styles/CareViewPatientsSummary.scss
@@ -80,14 +80,9 @@
   }
 }
 
-.care-view-table-wrapper {
-  text-align: -webkit-center;
-}
-
 .care-view-patient-table {
-  display: block;
+  display: grid;
   max-height: 500px;
-  max-width: fit-content;
   overflow: scroll;
   margin: 8px 0;
   border: 1px solid #8d8d8d;
